Bug 421564 - New Window Rules kcm takes some time to show the configured window rules
Summary: New Window Rules kcm takes some time to show the configured window rules
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinrules (other bugs)
Version First Reported In: 5.18.90
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-15 13:16 UTC by Patrick Silva
Modified: 2023-11-13 19:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
screen recording (1.00 MB, video/webm)
2020-05-15 13:16 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-05-15 13:16:28 UTC
Created attachment 128475 [details]
screen recording

SUMMARY
I have dozens of window rules configured on my system. When I open the new Window Rules kcm it shows
"No rules for specific windows are currently set" placeholder text during some seconds before
shows my window rules. Watch the attached screen recording please.

EXPECTED RESULT
new Window Rules kcm should show all configured window rules immediately on opening 

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.90
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0 rc2
Comment 1 Ismael Asensio 2020-06-10 22:31:19 UTC
The loading time has decreased for me after:
https://invent.kde.org/plasma/kwin/-/merge_requests/54

Maybe that's enough to be unnoticeable.
Otherwise, I'll look to improve loading time on a different area.
Comment 2 Ismael Asensio 2020-06-26 17:38:09 UTC
Hi Patrick,

Could you confirm if this is still an issue after Plasma 5.19.1?
Comment 3 Patrick Silva 2020-06-27 22:43:34 UTC
I can read "No rules for specific windows are currently set" during 0.5 second before the kcm lists the window rules.

Operating System: Arch Linux
KDE Plasma Version: 5.19.2
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0
Comment 4 Christoph Feck 2020-06-29 20:29:36 UTC
Requested information was added with comment 3; changing status for inspection.
Comment 5 Ismael Asensio 2021-06-07 19:25:21 UTC
Git commit b5a58f83ee824bddf707f295451b597e5f349621 by Ismael Asensio.
Committed on 07/06/2021 at 19:03.
Pushed by iasensio into branch 'master'.

kcm/kwinrules: Manage RuleSettings instead of Rules objects

The KCM now manages the RuleSettings config objects directly,
instead of using a list of `Rules` objects as an intermediary.

This highly reduces the overhead, improving loading and saving
times, and also enables a better use of KConfig capabilites.

The config state is now automatically tracked by KConfigXT
objects. Whenever the user edits either the rule list, or any
specific property within a rule, the `needsSave` state is
updated accordingly.
FIXED-IN: 5.23

M  +77   -82   src/kcmkwin/kwinrules/kcmrules.cpp
M  +2    -3    src/kcmkwin/kwinrules/kcmrules.h
M  +65   -44   src/kcmkwin/kwinrules/rulebookmodel.cpp
M  +12   -5    src/kcmkwin/kwinrules/rulebookmodel.h
M  +30   -65   src/kcmkwin/kwinrules/rulesmodel.cpp
M  +4    -5    src/kcmkwin/kwinrules/rulesmodel.h

https://invent.kde.org/plasma/kwin/commit/b5a58f83ee824bddf707f295451b597e5f349621
Comment 6 Patrick Silva 2022-02-15 18:50:28 UTC
Unfortunately, not fixed. I see "No rules for specific windows are currently set" placeholder text for a few milliseconds yet.

Operating System: Arch Linux
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 7 Patrick Silva 2023-11-13 19:28:57 UTC
Cannot reproduce.

Operating System: Arch Linux 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: Wayland