src/kcmkwin/kwinrules/kcmrules.h
@@ -6,7 +6,6 @@
 
 #pragma once
 
-#include <rules.h>
 #include "rulebookmodel.h"
 #include "rulesmodel.h"
 
@@ -15,6 +14,7 @@
 
 namespace KWin
 {
+class RuleSettings;
 
 class KCMKWinRules : public KQuickAddons::ConfigModule
 {
@@ -50,12 +50,11 @@ private slots:
 
 private:
     int editIndex() const;
-    void saveCurrentRule();
     void parseArguments(const QStringList &args);
     void createRuleFromProperties();
 
     QModelIndex findRuleWithProperties(const QVariantMap &info, bool wholeApp) const;
-    Rules *ruleForProperties(const QVariantMap &info, bool wholeApp) const;
+    void fillSettingsFromProperties(RuleSettings *settings, const QVariantMap &info, bool wholeApp) const;
 
 private:
     RuleBookModel *m_ruleBookModel;
