src/kcmkwin/kwinrules/rulesmodel.h
@@ -64,11 +64,8 @@ public:
     bool hasRule(const QString &key) const;
     RuleItem *ruleItem(const QString &key) const;
 
-    void readFromSettings(RuleSettings *settings);
-    void writeToSettings(RuleSettings *settings) const;
-
-    void importFromRules(Rules *rules);
-    Rules *exportToRules() const;
+    RuleSettings *settings() const;
+    void setSettings(RuleSettings *settings);
 
     void setSuggestedProperties(const QVariantMap &info);
 
@@ -90,6 +87,7 @@ signals:
 private:
     void populateRuleList();
     RuleItem *addRule(RuleItem *rule);
+    void writeToSettings(RuleItem *rule);
 
     QString defaultDescription() const;
     void processSuggestion(const QString &key, const QVariant &value);
@@ -117,6 +115,7 @@ private:
 #ifdef KWIN_BUILD_ACTIVITIES
     KActivities::Consumer *m_activities;
 #endif
+    RuleSettings *m_settings;
 };
 
 }
